新增swagger,修复Dijkstra,同时修复循环定义
