# server/handler/course_handler/table.go
@@ -13,6 +13,16 @@ type tableResponse struct {
 	Courses *[]*system.CourseInfo `json:"course_list"`
 }
 
+// TableHandler  课程表Handler
+// @Summary      课程表
+// @Description  获取学生所有的课程表信息
+// @Tags         课程表相关接口
+// @Accept 		 application/json
+// @Produce      application/json
+// @Param        user_id query string true "学生ID"
+// @Security 	 ApiKeyAuth
+// @Success      200  {object}  tableResponse
+// @Router       /course/table [get]
 func TableHandler(c *gin.Context) {
 	rawUserId, ok1 := c.Get("user_id")
 	userId, ok2 := rawUserId.(int64)
