# server/handler/user_handler/register.go
@@ -13,6 +13,17 @@ type registerResponse struct {
 	*common.AccessResponse
 }
 
+// RegisterHandler 用户注册
+// @Summary      注册
+// @Description  用户注册
+// @Tags         用户鉴权
+// @Accept 		 application/json
+// @Produce      application/json
+// @Param		 student_id query string true "学号"
+// @Param		 username query string true "用户名"
+// @Param        password query string true "密码"
+// @Success      200  {object}  registerResponse
+// @Router       /user/register [post]
 func RegisterHandler(c *gin.Context) {
 	// 1.拿到middleware传来的参数
 
