# server/main.go
@@ -1,7 +1,29 @@
 package main
 
-import "server/router"
+import (
+	"server/router"
+)
 
+// @title           Student Management System API
+// @version         alpha 1.0
+// @description     A application for Data Structure Lesson
+// @termsOfService  http://swagger.io/terms/
+
+// @contact.name   API Support
+// @contact.url    http://www.swagger.io/support
+// @contact.email  support@swagger.io
+
+// @license.name  Apache 2.0
+// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host      localhost:8080
+// @BasePath  /Student_Management_System
+
+// @securityDefinitions.apikey  ApiKeyAuth
+// @in query
+// @name token
+// @externalDocs.description  OpenAPI
+// @externalDocs.url          https://swagger.io/resources/open-api/
 func main() {
 	// userId, _ := utils.GenerateId()
 	// tokenString, _ := utils.ReleaseToken(userId)
